# projectGUI3D

./: .gitignore  CMakeLists.txt
Project/: Shader.cpp  Shader.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
Project/Camera/: Camera.cpp  Camera.hpp
Project/Engine/Camera/: Camera.cpp  Camera.hpp  CameraFps.cpp  CameraFps.hpp
Project/Engine/Renderer/: LightsManager.cpp  LightsManager.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelRenderer.cpp  ModelRenderer.hpp  ObjectsManager.cpp  ObjectsManager.hpp  Renderer.cpp  Renderer.hpp  TextureManager.cpp  TextureManager.hpp
Project/Engine/Renderer/Lights/: DirectionLight.cpp  DirectionLight.hpp  ILight.hpp  PointLight.cpp  PointLight.hpp
Project/Engine/Renderer/Objects/: CubeRenderer.cpp  CubeRenderer.hpp  ManageObjects.h  Material.hpp  Object.cpp  Object.hpp  ObjectRenderer.hpp  PlaneRenderer.cpp  PlaneRenderer.hpp
Project/Objects/: IObjectGLProperties.hpp  ManageObjects.h  PlaneGLProperties.cpp  PlaneGLProperties.hpp  PrimitivePlane.cpp  PrimitivePlane.hpp
Project/Shaders/: Color.frag  Color.vs  LightCast.frag  MultipleLighting.vs  MultipleLightingWithoutText.frag  Phong.vs  PhongMap.frag  Texture.frag
Shaders/: Color.frag  Glow.frag  MultipleLighting.frag  MultipleLightingWithoutText.frag  Phong.frag  PhongMaterial.frag
dependencies/SimpleOpenGLImageLibrary/projects/VC9/: UpgradeLog.htm
dependencies/SimpleOpenGLImageLibrary/projects/VC9/Debug/: SOIL.idb
dependencies/SimpleOpenGLImageLibrary/projects/VC9/Debug/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate  lib.command.1.tlog
dependencies/SimpleOpenGLImageLibrary/projects/VC9/Release/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate  lib.command.1.tlog
